# emg-feedback-user-training

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
emg_feedback_user_training/: data.py  main.py  similarities.py  utils.py
emg_feedback_user_training/models/: ovo.py  svm.py  svmnet.py
