[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emg-feedback-user-training"
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["emg_feedback_user_training"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I001"]
unfixable = ["B007", "ERA001", "F841", "RUF100"]
